--- a/NLTK/Text Preprocessing-Stopwords.ipynb
+++ b/NLTK/Text Preprocessing-Stopwords.ipynb
@@ -1321,7 +1321,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1335,7 +1335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
